[gd_scene load_steps=5 format=2]

[ext_resource path="res://sourcesans.tres" type="DynamicFont" id=1]
[ext_resource path="res://mainmenu_2.gd" type="Script" id=2]
[ext_resource path="res://earth_small2.jpg" type="Texture" id=3]
[ext_resource path="res://earth_small.jpg" type="Texture" id=4]

[node name="Panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="C"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="C/V"]
margin_right = 720.0
margin_bottom = 309.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.12549, 0.12549, 0.145098, 1 )

[node name="TextureRect" type="TextureRect" parent="C/V/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -499.0
margin_top = -14.0
margin_right = 501.0
margin_bottom = -14.0
texture = ExtResource( 4 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="C/V"]
margin_top = 313.0
margin_right = 720.0
margin_bottom = 1167.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 50
custom_constants/margin_left = 30
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="VBoxContainer" parent="C/V/M"]
margin_left = 30.0
margin_top = 50.0
margin_right = 690.0
margin_bottom = 804.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Empty3" type="Label" parent="C/V/M/R"]
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CHeader" type="HBoxContainer" parent="C/V/M/R"]
margin_top = 44.0
margin_right = 660.0
margin_bottom = 78.0
size_flags_horizontal = 3

[node name="R" type="CenterContainer" parent="C/V/M/R/CHeader"]
margin_right = 660.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="D" type="HBoxContainer" parent="C/V/M/R/CHeader/R"]
margin_left = 330.0
margin_right = 330.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="C/V/M/R/CHeader/R/D"]
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty" type="Label" parent="C/V/M/R"]
margin_top = 82.0
margin_right = 660.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Empty2" type="Label" parent="C/V/M/R"]
margin_top = 126.0
margin_right = 660.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Empty5" type="Label" parent="C/V/M/R"]
margin_top = 170.0
margin_right = 660.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Empty6" type="Label" parent="C/V/M/R"]
margin_top = 214.0
margin_right = 660.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CButtons2" type="HBoxContainer" parent="C/V/M/R"]
margin_top = 258.0
margin_right = 660.0
margin_bottom = 438.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="Decision3" type="Button" parent="C/V/M/R/CButtons2"]
margin_right = 305.0
margin_bottom = 180.0
rect_min_size = Vector2( 210, 180 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="C" type="CenterContainer" parent="C/V/M/R/CButtons2/Decision3"]
anchor_right = 0.990164
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 180 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="C/V/M/R/CButtons2/Decision3/C"]
margin_left = 90.0
margin_top = 73.0
margin_right = 211.0
margin_bottom = 107.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Save Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decision4" type="Button" parent="C/V/M/R/CButtons2"]
margin_left = 355.0
margin_right = 660.0
margin_bottom = 180.0
rect_min_size = Vector2( 210, 180 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="C" type="CenterContainer" parent="C/V/M/R/CButtons2/Decision4"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 180 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="C/V/M/R/CButtons2/Decision4/C"]
margin_left = 48.0
margin_top = 73.0
margin_right = 257.0
margin_bottom = 107.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Return to the game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty7" type="Label" parent="C/V/M/R"]
margin_top = 442.0
margin_right = 660.0
margin_bottom = 482.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Quote" type="RichTextLabel" parent="C/V/M/R"]
margin_top = 486.0
margin_right = 660.0
margin_bottom = 586.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 1 )

[node name="Empty9" type="Label" parent="C/V/M/R"]
margin_top = 590.0
margin_right = 660.0
margin_bottom = 630.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="H" type="HBoxContainer" parent="C/V/M/R"]
margin_top = 634.0
margin_right = 660.0
margin_bottom = 754.0

[node name="Label2" type="Label" parent="C/V/M/R/H"]
margin_top = 53.0
margin_right = 221.0
margin_bottom = 67.0
size_flags_horizontal = 3

[node name="Quit" type="Button" parent="C/V/M/R/H"]
margin_left = 225.0
margin_right = 435.0
margin_bottom = 120.0
rect_min_size = Vector2( 210, 120 )
custom_fonts/font = ExtResource( 1 )
text = "Quit"

[node name="Label" type="Label" parent="C/V/M/R/H"]
margin_left = 439.0
margin_top = 53.0
margin_right = 660.0
margin_bottom = 67.0
size_flags_horizontal = 3

[node name="ColorRect2" type="ColorRect" parent="C/V"]
margin_top = 1171.0
margin_right = 720.0
margin_bottom = 1480.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.12549, 0.12549, 0.145098, 1 )

[node name="TextureRect" type="TextureRect" parent="C/V/ColorRect2"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -499.0
margin_top = 12.0
margin_right = 501.0
margin_bottom = 13.0
texture = ExtResource( 3 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="C/V/M/R/CButtons2/Decision3" to="." method="_on_Decision3_pressed"]
[connection signal="pressed" from="C/V/M/R/CButtons2/Decision4" to="." method="_on_Decision4_pressed"]
[connection signal="pressed" from="C/V/M/R/H/Quit" to="." method="_on_Quit_pressed"]
